# five-days-ai

./: .gitignore  Kaggle_Capstone_Writeup.md  README.md
.agents/: AGENTS.md
generic-ai-client/: package-lock.json  package.json
generic-ai-client/src/app/: globals.css
generic-ai-client/src/components/: ChatInput.tsx  ModelSelector.tsx
generic-ai-client/src/hooks/: useLocalStorage.ts
generic-ai-client/src/lib/: models.ts
multi-agent-ui/: package-lock.json  package.json
multi-agent-ui/src/app/: layout.tsx  page.tsx
multi-agent-ui/src/components/: ChatWindow.tsx  EmptyState.tsx  MessageItem.tsx  ModelSelector.tsx  SettingsModal.tsx  Sidebar.tsx
multi-agent-ui/src/context/: ChatContext.tsx
openspec/changes/add-mcp-subordinates-tool/: proposal.md  tasks.md
openspec/changes/five-day-rag-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/refactor-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/rename-ui-to-generic-client/: proposal.md  tasks.md
openspec/specs/mcp-refactor/: spec.md
openspec/specs/mcp-subordinates/: spec.md
openspec/specs/multi-agent-orchestrator/: spec.md
openspec/specs/org-chart-hierarchy/: spec.md
openspec/specs/rag-backend/: spec.md
openspec/specs/react-agent-api/: spec.md
phase-1/: README.md  app.py  evaluate_rag.py  org_chart_server.py  pyproject.toml  step1.py  step2.py  step3.py  step4.py  step5.py  test_integration.py
phase-1/ingest_docs/: equipment_reimbursement.md  oncall_schedule.md  vacation_policy.md
phase-1/mcp/: org_chart.json  org_chart_server.py
(+36 files in other folders)
