[project]
name = "phase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "mcp>=1.0.0",
]
